just playing wiht a card game idea for a sec

--- a/SOLID.examples/SOLID.examples/SOLID.examples.csproj
+++ b/SOLID.examples/SOLID.examples/SOLID.examples.csproj
@@ -13,4 +13,8 @@
     <Folder Include="2.OpenClosed\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Cards.Strategy\Cards.Strategy.csproj" />
+  </ItemGroup>
+
 </Project>
